# cuda-example

aos_vs_soa/: aos_vs_soa.cu
atomic_functions/: atomic_add_groundup.cu  atomic_intro.cu  atomic_performance_test.cu  test
cuda_error_sum_array_timing/: cuda_error_sum_array_timing.cu
dynamic_parallelism/: dynamic_parallelism.cu
hello_world/: kernel.cu
implementations/01_vector_addition/: baseline  prefetch  (+1 more)
inter_stream_dependency_cuda_event/: inter_stream_dependency_cuda_event.cu  test
intros/: README.md
intros/dynamic_parallelism/: CMakeLists.txt
matrix_transpose/: matrix_transpose.cu
misaligned_write/: misaligned_write.cu
pinned_memory_test/: pinned_memory_test.cu  pinned_test
prefix_scan/: scan.cu  test
query_device/: CMakeLists.txt  query_device.cu
shared_memory/: test_intro
shared_memory_access_dynamic/: row_major_access_memory_dynamic.cu
shared_memory_access_padding/: shared_memory_access_padding.cu
shared_memory_access_test/: row_major_shared_memory_access_test.cu  test
shared_memory_intro/: intro_smem.cu
standard_intrinsic_performance_cmp/: test
sum_array_async/: sum_array_async.cu
synchronization_reduction/: CMakeLists.txt  syncchronization_reduction.cu
timer_with_cuda_event/: timer_with_cuda_event.cu
unified_memory_test/: unified_memo_test
unique_index_calculation_idx/: CMakeLists.txt  uniq_idx_calc_ids.cu  unique_index_calc_3d.cu
warp_divergence/: warp_divergence_test.out
warp_id_thread_id/: warp_id_thread_id.cu
warp_shuffle_instruction/: CMakeLists.txt
zero_memory_test/: zero_memory_test.cu
(+105 files in other folders)
